Import patches-unapplied version 5.7.11-0ubuntu5 to ubuntu/xenial-proposed
Imported using git-ubuntu import.

Changelog parent: 9e0b1791862f65b45dd9bf9512c4ae8073d62f1e

New changelog entries:
  * d/mysql-server-5.7.postinst: ignore mysql_upgrade's exit status when
    it is one that includes the indication that there is nothing to do
    (LP: #1566406).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+mysql-5.7 (5.7.11-0ubuntu5) xenial; urgency=medium
+
+  * d/mysql-server-5.7.postinst: ignore mysql_upgrade's exit status when
+    it is one that includes the indication that there is nothing to do
+    (LP: #1566406).
+
+ -- Robie Basak <robie.basak@ubuntu.com>  Thu, 07 Apr 2016 11:58:28 +0100
+
 mysql-5.7 (5.7.11-0ubuntu4) xenial; urgency=medium
 
   * d/p/allowemptyport.patch: update corresponding test.
