--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mysql-5.7 (5.7.12-0ubuntu2) yakkety; urgency=medium
+
+  * No change rebuild to fix miscompilation on s390x. LP: #1572613
+
+ -- Dimitri John Ledkov <xnox@ubuntu.com>  Tue, 26 Apr 2016 13:11:50 +0100
+
 mysql-5.7 (5.7.12-0ubuntu1) xenial-security; urgency=medium
 
   * SECURITY UPDATE: Update to 5.7.12 to fix security issues (LP: #1572559)
