--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mysql-5.7 (5.7.12-0ubuntu1.1) xenial; urgency=medium
+
+  * Recompile to resolve miscompilation on s390x architecture. LP:
+    #1572613
+
+ -- Dimitri John Ledkov <xnox@ubuntu.com>  Fri, 20 May 2016 04:30:16 +0100
+
 mysql-5.7 (5.7.12-0ubuntu1) xenial-security; urgency=medium
 
   * SECURITY UPDATE: Update to 5.7.12 to fix security issues (LP: #1572559)
