--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mysql-5.7 (5.7.13-0ubuntu2) yakkety; urgency=medium
+
+  * Drop obsolete initscripts dependency. Backported from Debian packaging
+    git. (Closes: #804992)
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 23 Jun 2016 08:33:04 +0200
+
 mysql-5.7 (5.7.13-0ubuntu1) yakkety; urgency=medium
 
   * Ubuntu merge from Debian VCS 1cdae6c. Remaining changes:
