--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mysql-5.7 (5.7.18-0ubuntu2) artful; urgency=medium
+
+  * No-change rebuild against libevent-core-2.1-6
+
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Mon, 31 Jul 2017 01:29:15 +0000
+
 mysql-5.7 (5.7.18-0ubuntu1) artful; urgency=medium
 
   * Fixed failing test main.mysql_not_windows
