Import patches-unapplied version 5.7.23-0ubuntu2 to ubuntu/cosmic-proposed
Imported using git-ubuntu import.

Changelog parent: 87f70bf04c809a9f9be4832d7e0bda1f18e38ae9

New changelog entries:
  * debian/patches/disable_float_test.patch: disable test that is failing
    on ppc64el due to float differences pending further investigation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mysql-5.7 (5.7.23-0ubuntu2) cosmic; urgency=medium
+
+  * debian/patches/disable_float_test.patch: disable test that is failing
+    on ppc64el due to float differences pending further investigation.
+
+ -- Marc Deslauriers <marc.deslauriers@ubuntu.com>  Fri, 24 Aug 2018 11:57:50 -0400
+
 mysql-5.7 (5.7.23-0ubuntu1) cosmic; urgency=medium
 
   * SECURITY UPDATE: Update to 5.7.23 to fix security issues
