--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -3,14 +3,14 @@
 #
 # Vincent Zweije <zweije@xs4all.nl>, 2006.
 # Eric Spreen <erispre@gmail.com, 2010.
-# Frans Spiesschaert <Frans.Spiesschaert@yucom.be>, 2016.
+# Frans Spiesschaert <Frans.Spiesschaert@yucom.be>, 2016, 2018.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: mysql-5.7 5.7.15-1\n"
 "Report-Msgid-Bugs-To: mysql-5.7@packages.debian.org\n"
 "POT-Creation-Date: 2018-01-10 07:21+0000\n"
-"PO-Revision-Date: 2016-11-08 15:08+0100\n"
+"PO-Revision-Date: 2018-03-29 20:23+0200\n"
 "Last-Translator: Frans Spiesschaert <Frans.Spiesschaert@yucom.be>\n"
 "Language-Team: Debian Dutch l10n Team <debian-l10n-dutch@lists.debian.org>\n"
 "Language: nl\n"
@@ -18,13 +18,14 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Gtranslator 2.91.6\n"
+"X-Generator: Gtranslator 2.91.7\n"
 
 #. Type: note
 #. Description
 #: ../mysql-server-5.7.templates:2001
 msgid "Automatic maintenance of MySQL server daemon disabled"
 msgstr ""
+"Het automatisch onderhoud van de achtergronddienst MySQL-server werd uitgezet"
 
 #. Type: note
 #. Description
@@ -35,6 +36,11 @@ msgid ""
 "MySQL installation has been disabled to allow other packaging tasks to "
 "complete. For more details, see /etc/mysql/FROZEN."
 msgstr ""
+"De scripts voor pakketonderhoud vonden een situatie waarmee ze niet overweg "
+"kunnen en kunnen de configuratie van MySQL niet voortzetten. Het automatisch "
+"beheer van uw MySQL-installatie werd uitgezet om toe te laten dat de andere "
+"taken voor het onderhoud van het pakket, afgerond worden. Raadpleeg /etc/"
+"mysql/FROZEN voor meer informatie."
 
 #. Type: note
 #. Description
@@ -163,24 +169,19 @@ msgstr ""
 #. Description
 #: ../mysql-server-5.7.templates:9001
 msgid "NDB Cluster seems to be in use"
-msgstr "De NDB-cluster lijkt in gebruik te zijn"
+msgstr "NDB Cluster lijkt in gebruik te zijn"
 
 #. Type: error
 #. Description
 #: ../mysql-server-5.7.templates:9001
-#, fuzzy
-#| msgid ""
-#| "MySQL-5.7 no longer provides NDB Cluster support. Please migrate to the "
-#| "new mysql-cluster-server package and remove all lines starting with \"ndb"
-#| "\" from all config files below /etc/mysql/."
 msgid ""
 "MySQL-5.7 no longer provides NDB Cluster support. Please migrate to the new "
 "mysql-cluster-server package and remove all lines starting with \"ndb\" from "
 "all config files below /etc/mysql/."
 msgstr ""
-"MySQL-5.7 biedt niet langer ondersteuning voor NDB Cluster. Migreer naar het "
-"nieuwe pakket mysql-cluster en verwijder alle regels die beginnen met \"ndb"
-"\" van alle configuratiebestanden onder /etc/mysql/."
+"MySQL-5.7 biedt niet langer ondersteuning voor NDB Cluster. Schakel over "
+"naar het nieuwe pakket mysql-cluster-server en verwijder alle regels die "
+"beginnen met \"ndb\" uit alle configuratiebestanden onder /etc/mysql/."
 
 #~ msgid "Really proceed with downgrade?"
 #~ msgstr "Wilt u echt degraderen naar een oudere versie?"
