--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mysql-5.7 (5.7.31-u20) focal; urgency=medium
+
+  * Non-maintainer upload.
+  * rebuild for focal
+
+ -- Mark Zhitomirski <mz@exactpro.com>  Sun, 18 Oct 2020 00:49:57 +0300
+
 mysql-5.7 (5.7.31-0ubuntu0.18.04.1) bionic-security; urgency=medium
 
   * SECURITY UPDATE: Update to 5.7.31 to fix security issues
